syntax = "proto3";

service GStoreServerService {
  rpc ReadValue (ReadValueRequest) returns (ReadValueReply);
  rpc WriteValue (WriteValueRequest) returns (WriteValueReply);
  rpc ListServerObjects (ListServerObjectsRequest)  returns (ListServerObjectsReply);
  rpc ListGlobal (ListGlobalRequest) returns (ListGlobalReply);
  rpc ShareWrite (ShareWriteRequest) returns (ShareWriteReply);
}

message ReadValueRequest {
  string partition_id = 1;
  string object_id = 2;
}
message ReadValueReply {
	string value = 1;
	int32 version = 2;
	int32 server_index = 3;
}

message WriteValueRequest {
	string partition_id = 1;
	string object_id = 2;
	string value = 3;
}

message WriteValueReply {
	bool ok = 1;
}

message ListServerObjectsRequest {
	
}

message ListServerObjectsReply {
	repeated Object objects = 1;
}

message Object {
	string partition_id = 1;
	string object_id = 2;
	string value = 3;
	bool isMaster = 4;
}

message ListGlobalRequest {
	string partition_id = 1;
}

message ObjectDescription {
	string partition_id = 1;
	string object_id = 2;
}

message ListGlobalReply {
	repeated ObjectDescription obj_desc = 1;
}

message ShareWriteRequest {
	string object_id = 1;
	string value = 2;
}

message ShareWriteReply {
	bool ok = 1;
}
